--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,8 +6,8 @@
 /*Обертка для сервиса*/
 .service {
   background-color: rgb(9, 9, 66);
+  width: 85%;
   padding: 3rem;
-  display: grid;
   color: aliceblue;
   font-style: normal;
   font-weight: 500;
@@ -18,10 +18,19 @@
   font-size: 22px;
 }
 
-/*Подзаголовок сервиса*/
-.service__subtitle {
+.service__blok {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+}
+
+/*Подзаголовок сервиса*/
+/* .service__subtitle {
+  display: grid; */
+/* grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr; */
+/* } */
+.service__subtitle_text {
   color: rgb(13, 212, 212);
   font-size: 18px;
 }
@@ -40,10 +49,37 @@
   border: 1.5px dashed rgb(13, 212, 212);
   background: transparent;
   margin-bottom: 25px;
-  width: 48%;
+  width: 93%;
+  color: rgb(221, 201, 176);
+}
+
+.service__input_fio::placeholder,
+.service__input_avatar::placeholder,
+.service__input_comment::placeholder {
+  color: rgba(240, 248, 255, 0.438);
+  font-size: 11px;
 }
 
 /*Поле ввода комментария*/
 .service__input_comment {
-  height: 200px;
+  min-height: 200px;
+  vertical-align: top;
+}
+
+/*Кнопка "отправить"*/
+.service__input_button {
+  background-color: rgb(13, 212, 212);
+  border: none;
+  padding: 8px;
+  color: aliceblue;
+}
+.service__subtitle_foto {
+  min-height: 200px;
+}
+
+.service__subtitle_comment {
+  background: transparent;
+  min-height: 200px;
+  width: 90%;
+  border: none;
 }
